deploy/overlays/prod/patch-resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  template:
    spec:
      containers:
        - name: postgres
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: "2"
              memory: 4Gi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: warehouse
spec:
  template:
    spec:
      containers:
        - name: warehouse
          resources:
            requests:
              cpu: 750m
              memory: 2Gi
            limits:
              cpu: "3"
              memory: 8Gi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
spec:
  template:
    spec:
      containers:
        - name: minio
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: "3"
              memory: 4Gi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow-webserver
spec:
  template:
    spec:
      containers:
        - name: airflow-webserver
          resources:
            requests:
              cpu: "1"
              memory: 2Gi
            limits:
              cpu: "3"
              memory: 4Gi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow-scheduler
spec:
  template:
    spec:
      containers:
        - name: airflow-scheduler
          resources:
            requests:
              cpu: "1"
              memory: 2Gi
            limits:
              cpu: "4"
              memory: 6Gi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  template:
    spec:
      containers:
        - name: frontend
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 512Mi
